2007-06-04  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04271] vi_prec_num
	* main.c: make number prefixes working when vi_prec_num=0.

2007-05-31  Dai Sato <satodai@w3m.jp>

	* w3m 0.5.2
	* version.c.in: update
	* doc/README: version 0.5.2, release date, maintainer
	* doc-jp/README: ditto
	* po/w3m.pot, ja.po: ditto
	* NEWS: update
	* configure.ac: version 0.5.2
	* configure: regenerated

2007-05-31  Tsutomu OKADA

	* [20070530101431@w3mbbs] Re: road to 0.5.2
	* ftp.c: fix typo.
	* main.c, mktable.c, w3mbookmark.c, w3mhelperpanel.c: add GC_INIT().

2007-05-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04266] Bug fix when tab browsing
	* fm.h, main.c: fix for tab browsing.

2007-05-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04265] compile error when #undef USE_BG_COLOR
	* terms.c: add #ifdef __CYGWIN__.

2007-05-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04264] Re: road to 0.5.2
	* po/makefile.in.in, scripts/*/Makefile.in: add datarootdir.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04262] FreeBSD sysmouse (Re: road to 0.5.2)
	* configure.ac: unbreak sysmouse support, pointed out by 
	  Travis Poppe <tlp@lickwid.net>.
	* configure: regenerated.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04260] Warning (Re: road to 0.5.2)
	* main.c, display.c: delete unused macros, change void to static void.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04259] long long (Re: road to 0.5.2)
	* Makefile.in, aclocal.m4: move 'gc' from $LIBS to $LIBGC.
	* configure: regenerated.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04256] Re: road to 0.5.2
	* scripts/Makefile.in, scripts/w3mhelp.cgi.in: add datarootdir.

2007-05-28  Hideyuki SHIRAI <shirai@meadowy.org>

	* [w3m-dev 04251] Re: road to 0.5.2
	* po/w3m.pot: pot-update.

2007-05-27  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04252] Re: road to 0.5.2